--- a/1.html
+++ b/1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./style.css">
     
     
     <title>Document</title>
@@ -9,6 +10,7 @@
 <body>
     <h1>HELLO WORLD!</h1>
     <a href="./view.html">view</a>
+
 
 </body>
 </html>
