branch created and image added

--- a/1.html
+++ b/1.html
@@ -10,6 +10,10 @@
 <body>
     <h1>HELLO WORLD!</h1>
     <a href="./view.html">view</a>
+    <p>iamge  view html webpage abyzar abu uzair
+        hvwuivfwivgfjiopw
+        ghioweehig
+    </p>
 
 
 </body>
